<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">WSBroadcaster for Android</string>

	<string name="button_text_start">Start</string>
	<string name="button_text_stop">Stop</string>

	<string name="optionmenu_preferences_title">Preferences</string>

	<string name="response_type_name_nothing">Nothing</string>
	<string name="response_type_name_echo">Echo</string>
	<string name="response_type_name_other">Other</string>
	<string name="response_type_name_all">All</string>

	<string name="response_type_value_nothing">nothing</string>
	<string name="response_type_value_echo">echo</string>
	<string name="response_type_value_other">other</string>
	<string name="response_type_value_all">all</string>

	<string name="server_status">Server Status</string>

	<string name="preference_http_server_path_title">HTTP Path</string>
	<string name="preference_http_server_path_summary">HTTP Server Path</string>
	<string name="preference_http_server_path_dialog_title">Input HTTP Path</string>

	<string name="preference_websocket_server_path_title">WebSocket Path</string>
	<string name="preference_websocket_server_path_summary">WebSocket Server Path</string>
	<string name="preference_websocket_server_path_dialog_title">Input WebSocket Path</string>

	<string name="preference_port_number_title">Port Number</string>
	<string name="preference_port_number_summary">Open Port Number</string>
	<string name="preference_port_number_dialog_title">Input Port Number</string>

	<string name="preference_response_type_title">Response Type</string>
	<string name="preference_response_type_summary">Operation on Receive Message</string>
	<string name="preference_response_type_dialog_title">Select Response Type</string>

	<string name="preference_periodic_message_title">Periodic Message</string>
	<string name="preference_periodic_message_summary">Send Message Periodically</string>

	<string name="preference_periodic_message_interval_title">Interval of Periodic Message</string>
	<string name="preference_periodic_message_interval_summary">in Seconds</string>
	<string name="preference_periodic_message_interval_dialog_title">Input Interval (seconds)</string>

	<string name="preference_periodic_message_text_title">Text of Periodic Message</string>
	<string name="preference_periodic_message_text_summary">Send Text</string>
	<string name="preference_periodic_message_text_dialog_title">Input Send Text</string>

	<string name="message_only_when_a_server_is_stoped">Only when a server is stoped.</string>
	<string name="message_cannot_make_directory_in_sd_card">Cannot make Directory in SD card.</string>
	<string name="message_cannot_same_path_http_and_websocket">Cannot same path HTTP and WebSocket.</string>

</resources>
