<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
>
	<Button
		android:id="@+id/button_start_stop"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	/>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
	>
		<TableLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		>
			<TableRow>
				<TextView
					android:text="@string/preference_port_number_title"
				/>
				<TextView
					android:id="@+id/display_area_port_number"
				/>
			</TableRow>
			<TableRow>
				<TextView
					android:text="@string/preference_response_type_title"
				/>
				<TextView
					android:id="@+id/display_area_response_type"
				/>
			</TableRow>
			<TableRow>
				<TextView
					android:text="@string/preference_periodic_message_title"
				/>
				<TextView
					android:id="@+id/display_area_periodic_message"
				/>
			</TableRow>
			<TableRow>
				<TextView
					android:text="@string/preference_periodic_message_interval_title"
				/>
				<TextView
					android:id="@+id/display_area_periodic_message_interval"
				/>
			</TableRow>
			<TableRow>
				<TextView
					android:text="@string/preference_periodic_message_text_title"
				/>
				<TextView
					android:id="@+id/display_area_periodic_message_text"
				/>
			</TableRow>
		</TableLayout>
	</ScrollView>
</LinearLayout>
